[package]
name = "sbin"
description = "🛠️ Fetches and updates binaries from Docker images—simple, fast, Rust-powered."
version = "0.1.25"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/sbin"
homepage = "https://github.com/lvillis/sbin"
documentation = "https://github.com/lvillis/sbin/blob/main/README.md"
exclude = [
    "/docs/",
    "/devtools/",
    "/snap/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/deb.asc",
    "/deny.toml",
    "/flake.*",
    "/justfile",
    "/powertest.yaml",
    "/rust-toolchain.toml",
    "/.envrc",
    "/.gitignore",
    "/.git-blame-ignore-revs",
    "/.pre-commit-config-non-nix.yaml",
    "/images/",
]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
semver = "1.0.24"
tabled = "0.17.0"

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
